[package]
name = "timeharsh"
version = "1.0.0"
authors = ["Kevin Dwyer <kevin@pheared.net>"]
description = "timeharsh implements the timehash algorithm, an algorithm for creating user configurable, variable-precision sliding windows of time. Useful for binning time values in large collections of data."
documentation = "https://dwyerk.github.io/timeharsh/timeharsh/index.html"
homepage = "https://github.com/dwyerk/timeharsh"
repository = "https://github.com/dwyerk/timeharsh"
license-file = "LICENSE"

[dependencies]

